--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,12 +6,20 @@
 		<title>Storystrap Template</title>
 		<meta name="generator" content="Bootply" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<link href="lib/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- bower:css -->
+    <link rel="stylesheet" href="/lib/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="/lib/font-awesome/css/font-awesome.min.css" />
+    <!-- endbower -->
+    <!-- bower:js -->
+    <script src="/lib/jquery/dist/jquery.js"></script>
+    <script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+    <!-- endbower -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="/css/styles.css">
+    <!-- endinject -->
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
 <header class="navbar navbar-bright navbar-fixed-top" role="banner">
@@ -54,7 +62,7 @@
   </div>
 </header>
 
-<div id="masthead">  
+<div id="masthead">
   <div class="container">
     <div class="row">
       <div class="col-md-7">
@@ -63,41 +71,41 @@
         </h1>
       </div>
       <div class="col-md-5">
-        <div class="well well-lg"> 
+        <div class="well well-lg">
           <div class="row">
             <div class="col-sm-12">
-              
-			
+
+
             </div>
           </div>
         </div>
       </div>
-    </div> 
+    </div>
   </div><!-- /cont -->
-  
+
   <div class="container">
     <div class="row">
       <div class="col-md-12">
         <div class="top-spacer"> </div>
       </div>
-    </div> 
+    </div>
   </div><!-- /cont -->
-  
+
 </div>
 
 
 <div class="container">
   <div class="row">
-    
-    <div class="col-md-12"> 
-      
+
+    <div class="col-md-12">
+
       <div class="panel">
         <div class="panel-body">
-          
-          
-          
+
+
+
           <!--/stories-->
-          <div class="row">    
+          <div class="row">
             <br>
             <div class="col-md-2 col-sm-3 text-center">
               <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
@@ -115,8 +123,8 @@
             </div>
           </div>
           <hr>
-          
-          <div class="row">    
+
+          <div class="row">
             <br>
             <div class="col-md-2 col-sm-3 text-center">
               <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/women/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
@@ -134,8 +142,8 @@
             </div>
           </div>
           <hr>
-                  
-          <div class="row">    
+
+          <div class="row">
             <br>
             <div class="col-md-2 col-sm-3 text-center">
               <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
@@ -154,7 +162,7 @@
           </div>
           <hr>
 
-          <div class="row">    
+          <div class="row">
             <br>
             <div class="col-md-2 col-sm-3 text-center">
               <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/women/56.jpg" style="width:100px;height:100px" class="img-circle"></a>
@@ -172,8 +180,8 @@
             </div>
           </div>
           <hr>
-          
-          <div class="row">    
+
+          <div class="row">
             <br>
             <div class="col-md-2 col-sm-3 text-center">
               <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/29.jpg" style="width:100px;height:100px" class="img-circle"></a>
@@ -192,34 +200,34 @@
           </div>
           <hr>
           <!--/stories-->
-          
-          
+
+
           <a href="/" class="btn btn-primary pull-right btnNext">More <i class="glyphicon glyphicon-chevron-right"></i></a>
-        
-          
+
+
         </div>
       </div>
-                                                                                       
-	                                                
-                                                      
+
+
+
    	</div><!--/col-12-->
   </div>
 </div>
-                                                
-                                                                                
+
+
 <hr>
 
 <div class="container" id="footer">
   <div class="row">
     <div class="col col-sm-12">
-      
+
       <h1>Follow Us</h1>
       <div class="btn-group">
        <a class="btn btn-twitter btn-lg" href="#"><i class="icon-twitter icon-large"></i> Twitter</a>
 	   <a class="btn btn-facebook btn-lg" href="#"><i class="icon-facebook icon-large"></i> Facebook</a>
 	   <a class="btn btn-google-plus btn-lg" href="#"><i class="icon-google-plus icon-large"></i> Google+</a>
       </div>
-      
+
     </div>
   </div>
 </div>
@@ -238,16 +246,16 @@
           <li><i class="icon-google-plus icon-2x"></i></li>
           <li><i class="icon-pinterest icon-2x"></i></li>
         </ul>
-        
+
       </div>
       <div class="col-sm-6">
-          <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>      
+          <p class="pull-right">Built with <i class="icon-heart-empty"></i> at <a href="http://www.bootply.com">Bootply</a></p>
       </div>
     </div>
   </div>
 </footer>
-	<!-- script references -->
-		<script src="lib/jquery/dist/jquery.min.js"></script>
-		<script src="lib/bootstrap/dist/js/bootstrap.min.js"></script>
+  <!-- inject:js -->
+  <script src="/js/app.js"></script>
+  <!-- endinject -->
 	</body>
 </html>
