--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -35,9 +35,9 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <% for (var i = 0; i < categories.length; i++) { %>
+        <% for (var i = 0; i < nav.length; i++) { %>
           <li>
-            <a href="#"><%= categories[i] %></a>
+            <a href="<%= nav[i].link %>"><%= nav[i].text %></a>
           </li>
         <% } %>
       </ul>
