--- a/src/views/bookView.ejs
+++ b/src/views/bookView.ejs
@@ -101,7 +101,7 @@
             <div class="row">
               <br>
               <div class="col-md-2 col-sm-3 text-center">
-                <a class="story-title" href="#"><img alt="" src="http://api.randomuser.me/portraits/thumb/men/58.jpg" style="width:100px;height:100px" class="img-circle"></a>
+                <a class="story-title" href="#"><img alt="" src="<%= book.data.image_url %>" style="width:100px;" class="img"></a>
               </div>
               <div class="col-md-10 col-sm-9">
                 <h3><%= book.title %></h3>
@@ -112,7 +112,7 @@
                     </h4></div>
                   <div class="col-xs-3"></div>
                 </div>
-                <br><br>
+                <p><%- book.data.description %></p>
               </div>
             </div>
           <!--/stories-->
